--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ body {
     height: 100%;
     margin: 0;
 }
+*{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 
 body {
     background-image: url(bg.jpg);
@@ -46,7 +49,6 @@ nav a {
     font-size: 20px;
     line-height: 60px;
     text-decoration: none;
-    font-family: 'bignoodletitling';
 }
 
 /* изменяем цвет фона при наведении курсора */
@@ -66,7 +68,6 @@ label {
     display: inline-block;
     text-align: left;
     font-size: 1.5rem;
-    font-family: 'bignoodletitling';
 }
 
 .form_db {
@@ -94,7 +95,6 @@ button {
 p.success,
 p.error {
     color: white;
-    font-family: lato;
     background: yellowgreen;
     display: inline-block;
     padding: 2px 10px;
@@ -108,7 +108,6 @@ input {
     border: 2px solid #ccc;
     font-size: 1.5rem;
     font-weight: 100;
-    font-family: 'Lato';
     padding: 10px;
 }
 
@@ -116,7 +115,6 @@ input {
     margin-left: auto;
     margin-right: 10px;
     color: #FFF;
-    font-family: 'bignoodletitling';
     margin-bottom: 10px;
 }
 
@@ -127,7 +125,6 @@ input {
     background-color: white;
     height: auto;
     overflow: auto;
-    font-family: 'bignoodletitling';
 }
 
 #container_info {
@@ -137,7 +134,6 @@ input {
     background-color: white;
     overflow: auto;
     height: auto;
-    font-family: 'bignoodletitling';
 }
 
 #container_com {
@@ -147,7 +143,6 @@ input {
     background-color: white;
     overflow: auto;
     height: auto;
-    font-family: 'bignoodletitling';
 }
 
 .main {
@@ -155,7 +150,6 @@ input {
     margin-left: 15%;
     margin-left: 15%;
     background-color: lavender;
-    height: 2000px;
     margin-top: 0px;
 }
 
@@ -175,18 +169,25 @@ textarea {
 .comment {
     margin-left: 10px;
 }
-table{
-    margin-left: 20%;
-    margin-right: 20%;
-    width:  60%;
+table {
+	width: 100%;
+	margin-bottom: 20px;
+	border-collapse: collapse; 
 }
-th {
-    background-color: lightblue;
-    color: red;
-    font-family: Arial
+table th {
+	font-weight: bold;
+	padding: 5px;
+	background: #efefef;
+	border: 1px solid #000000;
 }
-
-td {
-    color: blue;
-    font-family: Times New Roman
+table td {
+	border: 1px solid #0c0c0c;
+	padding: 5px;
+    text-align: center;
+}
+table tr td:first-child, table tr th:first-child {
+	border-left: none;
+}
+table tr td:last-child, table tr th:last-child {
+	border-right: none;
 }
